--- a/war/GWT.html
+++ b/war/GWT.html
@@ -2,7 +2,7 @@
 <head>
 
     <title>DetMatrix</title>
-    <link type="text/css" rel="stylesheet" href="GWT.css">
+    <link type="text/css" rel="stylesheet" href="/GWT.css">
     <script type="text/javascript" language="javascript" src="GWT/GWT.nocache.js"></script>
 
 </head>
